--- a/admin/templates/event_add_html.html
+++ b/admin/templates/event_add_html.html
@@ -5,7 +5,7 @@
     
 <h3 class="m-2">Создать событие</h3>
 <div class="addform">
-<form action="/admin/eventadd" method="post">
+<form action="{{url_for('administrator.eventadd')}}" method="post">
     <table class="m-auto">
         <thead>
         </thead>
