--- a/templates/recovery.html
+++ b/templates/recovery.html
@@ -6,7 +6,7 @@
     <h3 class="mb-4">Восстановление пароля</h3>
     <form action="/recovery_send" method="post">
         <p class="row"><label class="col-4">Введите адрес почты: </label><input class="col-7" type="text" name="email" /></p>
-        <p class="text-right m-0"><input class="mr-4" type="submit" value="Ввосстановить" /></p>
+        <p class="text-right m-0"><input class="mr-4" type="submit" value="Восстановить" /></p>
     </form>
     <div>{{message}}</div>
 </div>
