--- a/admin/templates/faculty_edit.html
+++ b/admin/templates/faculty_edit.html
@@ -5,14 +5,14 @@
 <div class="container p-3 border rounded-lg">
     
 <h2 class="m-2">Редактировать факультет</h2>
-<form action="/admin/facultyeditfoo" method="post">
+<form action="{{url_for('administrator.facultyeditfoo')}}" method="post">
     <input type="hidden" name="f_id" value="{{fac[0]}}" />
     <p class="row"><label class="col-2">Полное наименование: </label><input class="col-9" type="text" name="full_name" value="{{fac[1]}}" /></p>
     <p class="row"><label class="col-2">Краткое наименование: </label><input class="col-9" type="text" name="short_name" value="{{fac[2]}}" /></p>
     <p class="row"><label class="col-2">Руководитель: </label><input class="col-9" type="text" name="leader_name" value="{{fac[3]}}" /></p>
     <p class="row"><label class="col-2">Телефон: </label><input class="col-9" type="text" name="phone" value="{{fac[4]}}" /></p>
     <p class="row"><label class="col-2">E-mail: </label><input class="col-9" type="text" name="email" value="{{fac[5]}}" /></p>
-    <p class="text-right"><input type="submit" value="Редактировать" /> <button onclick="document.location.href = '/admin/faculty'">Отменить</button></p>
+    <p class="text-right"><input type="submit" value="Редактировать" /> <input type="button" onclick="document.location.href = '{{url_for('administrator.faculty')}}'" value="Отменить" /></p>
 </form>
 
     <footer></footer>
