--- a/admin/templates/posts.html
+++ b/admin/templates/posts.html
@@ -22,7 +22,7 @@
         <table class="table table-hover">
             <tr class="thead-dark"><th>id</th><th>Тип</th><th>Заголовок</th><th>Дата публикации</th><th></th><th></th></tr>
             {% for new in news %}
-            <tr><td>{{new[0]}}</td><td>{{new[4]}}</td><td>{{new[2]}}</td><td>{{new[1]}}</td><td><a href="/admin/postrecovery/{{new[0]}}">редактировать</a></td><td><a href="/admin/delpost/{{new[0]}}" onclick="return conf_del()">удалить</a></td></tr>
+            <tr><td>{{new[0]}}</td><td>{{new[4]}}</td><td>{{new[2]}}</td><td>{{new[1]}}</td><td><a href="{{url_for('administrator.postrecovery', id_new=new[0])}}">редактировать</a></td><td><a href="{{url_for('administrator.delpost', id_new=new[0])}}" onclick="return conf_del()">удалить</a></td></tr>
             {% endfor %}
         </table>
 
