--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -5,9 +5,9 @@
 <div class="container w-50 p-3 border rounded-lg">
     <h3 class="mb-4">Регистрация нового волонтера</h3>
     <form action="/personview" method="post">
-        <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" /></p>
-        <p class="row"><label class="col-4">Имя: </label><input class="col-7" type="text" name="name" /></p>
-        <p class="row"><label class="col-4">Отчество: </label><input class="col-7" type="text" name="patronymic" /></p>
+        <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" placeholder="Иванов"/></p>
+        <p class="row"><label class="col-4">Имя: </label><input class="col-7" type="text" name="name" placeholder="Иван"/></p>
+        <p class="row"><label class="col-4">Отчество: </label><input class="col-7" type="text" name="patronymic" placeholder="Иванович"/></p>
         <p class="row"><label class="col-4">Дата рождения: </label><input class="col-7" type="date" name="birthday" /></p>
         <!--Изменения Старт-->
         <p class="row">
@@ -42,13 +42,13 @@
         <!--Изменения Конец-->
         <p id="erremail" style="display:none" class="row"><span class="col-1 text-danger">Неверный формат электронной почты</span></p>
         <p id="err2email" style="display:none" class="row"><span class="col-1 text-danger">Такой адрес почты уже существует в базе данных</span></p>
-        <p class="row"><label class="col-4">E-mail: </label><input id="vltremail" class="col-7" type="text" name="email" /></p>
+        <p class="row"><label class="col-4">E-mail: </label><input id="vltremail" class="col-7" type="text" name="email" placeholder="myaddress@yandex.ru"/></p>
         <p id="errtel" style="display:none" class="row"><span class="col-1 text-danger">Неверный формат телефонного номера</span></p>
-        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="text" name="phone" /></p>
-        <p class="row"><label class="col-4">Логин: </label><input id="vlrtlog" class="col-7" type="text" name="login" /></p>
+        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="text" name="phone" placeholder="+7(903)555 55 55"/></p>
+        <p class="row"><label class="col-4">Логин: </label><input id="vlrtlog" class="col-7" type="text" name="login" placeholder="mylogin"/></p>
         <p id="errpass" style="display:none"><span class="col-11 text-danger">Пароль не должен совпадать с логином</span></p>
         <!--Изменения Старт-->
-        <p class="row"><label class="col-4">Пароль: </label><input id="vltrpass" class="col-7" type="password" name="password"></p>
+        <p class="row"><label class="col-4">Пароль: </label><input id="vltrpass" class="col-7" type="password" name="password" placeholder="mypassword"></p>
         <p class="row"><label class="col-9">Подтверждаю достоверность предоставленной информации: </label><input id="check" type="checkbox" name="check"></p>
         <!--Изменения Конец-->
         <p class="text-right m-0"><input id="butt" class="mr-4" type="submit" value="Зарегистрироваться" /></p>
