--- a/admin/templates/faculty.html
+++ b/admin/templates/faculty.html
@@ -6,11 +6,11 @@
     
 <h2 class="m-2">Управление факультетами</h2>
 <form action="{{url_for('administrator.facultyadd')}}" method="post">
-    <p class="row"><label class="col-2">Полное наименование: </label><input class="col-9" type="text" name="full_name" /></p>
-    <p class="row"><label class="col-2">Краткое наименование: </label><input class="col-9" type="text" name="short_name" /></p>
-    <p class="row"><label class="col-2">Руководитель: </label><input class="col-9" type="text" name="leader_name" /></p>
-    <p class="row"><label class="col-2">Телефон: </label><input class="col-9" type="text" name="phone" /></p>
-    <p class="row"><label class="col-2">E-mail: </label><input class="col-9" type="text" name="email" /></p>
+    <p class="row"><label class="col-2">Полное наименование: </label><input class="col-9" type="text" name="full_name" required /></p>
+    <p class="row"><label class="col-2">Краткое наименование: </label><input class="col-9" type="text" name="short_name" required /></p>
+    <p class="row"><label class="col-2">Руководитель: </label><input class="col-9" type="text" name="leader_name" required /></p>
+    <p class="row"><label class="col-2">Телефон: </label><input class="col-9" type="tel" name="phone" pattern="^(\+)?[0-9]{1,3}(\()?[0-9]{3}(\))?[\d\-\s]{7,17}$" placeholder="+7(903)7775533" required /></p>
+    <p class="row"><label class="col-2">E-mail: </label><input class="col-9" type="email" name="email" pattern="^([a-z0-9_-]+\.)*[a-z0-9_-]+@[a-z0-9_-]+(\.[a-z0-9_-]+)*\.[a-z]{2,6}$" placeholder="my@email.ru" required /></p>
     <p class="text-right"><input type="submit" value="Добавить" /></p>
 </form>
 
