text in email, add page about and contact

--- a/templates/basic.html
+++ b/templates/basic.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-9"><a href="/">Главная</a></div>
+            <div class="col-md-9"><a href="/">Главная</a> | <a href="{{url_for('about')}}">О нас</a> | <a href="{{url_for('contact')}}">Контакты</a></div>
             <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Личный кабинет</a></div>
         </div>
         <div class="exter">
