check email by temp_user, change text in user cabbin

--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -42,9 +42,9 @@
         <!--Изменения Конец-->
         <p id="erremail" style="display:none" class="row"><span class="col-1 text-danger">Неверный формат электронной почты</span></p>
         <p id="err2email" style="display:none" class="row"><span class="col-1 text-danger">Такой адрес почты уже существует в базе данных</span></p>
-        <p class="row"><label class="col-4">E-mail: </label><input id="vltremail" class="col-7" type="text" name="email" placeholder="myaddress@yandex.ru" required/></p>
+        <p class="row"><label class="col-4">E-mail: </label><input id="vltremail" class="col-7" type="email" name="email" placeholder="myaddress@yandex.ru" required /></p>
         <p id="errtel" style="display:none" class="row"><span class="col-1 text-danger">Неверный формат телефонного номера</span></p>
-        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="text" name="phone" placeholder="+7(903)555 55 55" required/></p>
+        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="tel" name="phone" placeholder="+7(903)555 55 55" required/></p>
         <p class="row"><label class="col-4">Логин: </label><input id="vlrtlog" class="col-7" type="text" name="login" placeholder="mylogin" required /></p>
         <p id="errpass" style="display:none"><span class="col-11 text-danger">Пароль не должен совпадать с логином</span></p>
         <!--Изменения Старт-->
