--- a/user/templates/cabinet.html
+++ b/user/templates/cabinet.html
@@ -7,9 +7,9 @@
     <div class="name bg-dark text-light p-2">Здравствуйте, {{volonteer[1]}} {{volonteer[2]}} {{volonteer[3]}}</div>
 
     <div class="rule_menu m-2">
-        <a href="/us/cabinet/nextevt">Предстоящие события доступные для регистрации</a> | 
-        <a href="/us/cabinet/regevt">Предстоящие события на которые зарегистрирован</a> | 
-        <a href="/us/cabinet/lastevt">События в которых принял участие</a>
+        <a href="/us/cabinet/nextevt">Предстоящие события</a> | 
+        <a href="/us/cabinet/regevt">Мое предстоящие события</a> | 
+        <a href="/us/cabinet/lastevt">События с моим участием</a>
     </div>
     <div class="content">
         {{content|safe}}
