--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
 <div class="news">
     <div class="media border rounded-right m-2 p-2">        <!---->
         <div>
-            <p>Мы занимаемся проведением олимпиад и конкурсов НИУ ВШЭ для <a href="olymp.hse.ru/mmo">школьников</a> и <a href="olymp.hse.ru/ma">студентов</a>.</p>
+            <p>Мы занимаемся проведением олимпиад и конкурсов НИУ ВШЭ для <a href="//olymp.hse.ru/mmo">школьников</a> и <a href="//olymp.hse.ru/ma">студентов</a>.</p>
             <p>Мы - это Дирекция по профессиональной ориентации и работе с одеренными учащимися.</p>
             <p>Олимпиады Вышки собирают тысячи участников, и без помощи ответственных и энергичных студентов Вышки нам просто не обойтись!</p>
             <p>Тех, кто готов присоединиться к нашей команде, ждет:</p>
@@ -21,7 +21,7 @@
             развитии способностей работать с аудиторией и прочих немаловажных вещах.</p>
             <p>Основная потребность в волонтерах приходится на январь-февраль.</p>
             <p>Чтобы присоединиться к рядам волонтеров, <a href="{{url_for('person')}}">зарегистрируйтесь</a> в системе.</p>
-            <p><strong>Следите за новостями в сообществе <a href="vk.com/hsevlunteers">волонтеров олимпиад</a>!</strong></p>
+            <p><strong>Следите за новостями в сообществе <a href="//vk.com/hsevolunteers">волонтеров олимпиад</a>!</strong></p>
         </div>        
     </div>
 </div>
