--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
 <div class="news">
     <div class="media border rounded-right m-2 p-2">        <!---->
         <div>
-            <p>Дирекция по профессиональной ориентации и работе с одаренными учащимися. Перейти на <a href="talent.hse.ru">сайт</a>.</p>
+            <p>Дирекция по профессиональной ориентации и работе с одаренными учащимися. Перейти на <a href="//talent.hse.ru">сайт</a>.</p>
             <p>Адресс: Москва, ул. Мясницая д.18, офис: 18-210, 18-211, 18-212</p>
             <p>Адрес электронной почты: olymp@hse.ru</p>
             <p>Телефон: 8 495 531 00 74</p>
