--- a/admin/templates/event_add_html.html
+++ b/admin/templates/event_add_html.html
@@ -1,7 +1,7 @@
 {%extends "basicadm.html"%}
 {%block title%}Легион-События{%endblock%}
 {%block body%}
-<div class="m-3 p-3 border rounded-lg">
+<div class="p-3 border rounded-lg container">
     
 <h3 class="m-2">Создать событие</h3>
 <div class="addform">
@@ -84,7 +84,7 @@
     </table>
 
 </form>
-<div />
+</div>
 
 </div>
 
