--- a/templates/about.html
+++ b/templates/about.html
@@ -8,20 +8,20 @@
 <div class="news">
     <div class="media border rounded-right m-2 p-2">        <!---->
         <div>
-            <p>Мы занимаемся проведением олимпиад и конкурсов НИУ ВШЭ для <a href="//olymp.hse.ru/mmo">школьников</a> и <a href="//olymp.hse.ru/ma">студентов</a>.</p>
-            <p>Мы - это Дирекция по профессиональной ориентации и работе с одеренными учащимися.</p>
+            <p>Мы занимаемся проведением олимпиад и конкурсов НИУ ВШЭ для <a href="//olymp.hse.ru/mmo" target="_blank">школьников</a> и <a href="//olymp.hse.ru/ma" target="_blank">студентов</a>.</p>
+            <p>Мы - это Дирекция по профессиональной ориентации и работе с одаренными учащимися.</p>
             <p>Олимпиады Вышки собирают тысячи участников, и без помощи ответственных и энергичных студентов Вышки нам просто не обойтись!</p>
             <p>Тех, кто готов присоединиться к нашей команде, ждет:</p>
             <ol>
-                <li>работа в штебе оргкомитета</li>
-                <li>работа организаторов олимпиадных состязаний в аудиториях</li>
+                <li>работа в штабе оргкомитета</li>
+                <li>работа дежурным в аудитории</li>
                 <li>благодарность и подарок Дирекции</li>
             </ol>
-            <p>не говоря о радости участия в хорошем и полезном деле, общении в хорошей компмании, 
+            <p>не говоря о радости участия в хорошем и полезном деле, общении в хорошей компании, 
             развитии способностей работать с аудиторией и прочих немаловажных вещах.</p>
             <p>Основная потребность в волонтерах приходится на январь-февраль.</p>
-            <p>Чтобы присоединиться к рядам волонтеров, <a href="{{url_for('person')}}">зарегистрируйтесь</a> в системе.</p>
-            <p><strong>Следите за новостями в сообществе <a href="//vk.com/hsevolunteers">волонтеров олимпиад</a>!</strong></p>
+            <p>Чтобы присоединиться к рядам волонтеров и быть в курсе предстоящих событий, <a href="{{url_for('person')}}">зарегистрируйтесь</a> в системе.</p>
+            <p><strong>Следите за новостями в сообществе <a href="//vk.com/hsevolunteers" target="_blank">волонтеров олимпиад</a>!</strong></p>
         </div>        
     </div>
 </div>
