--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -49,7 +49,7 @@
         <p id="errpass" style="display:none"><span class="col-11 text-danger">Пароль не должен совпадать с логином</span></p>
         <!--Изменения Старт-->
         <p class="row"><label class="col-4">Пароль: </label><input id="vltrpass" class="col-7" type="password" name="password" placeholder="mypassword" required /></p>
-        <p class="row"><label class="col-9">Подтверждаю достоверность предоставленной информации: </label><input id="check" type="checkbox" name="check"></p>
+        <p class="row"><span class="col-9"><input id="check" type="checkbox" name="check"> <label>Подтверждаю достоверность предоставленной информации</label></span></p>
         <!--Изменения Конец-->
         <p class="text-right m-0"><input id="butt" class="mr-4" type="submit" value="Зарегистрироваться" /></p>
     </form>
