--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: Beckett;
-    src: url(/static/font/whirl.ttf);
+    font-family: Myriad Pro;
+    src: url(/static/font/MyriadPro.ttf);
 }
 
 .top{
