--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -5,7 +5,7 @@
 <div class="container w-50 p-3 border rounded-lg">
     <h3 class="mb-4">Регистрация нового волонтера</h3>
     <form action="/personview" method="post">
-        <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" placeholder="Иванов" required/></p>
+        <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" placeholder="Иванов" required /></p>
         <p class="row"><label class="col-4">Имя: </label><input class="col-7" type="text" name="name" placeholder="Иван" required /></p>
         <p class="row"><label class="col-4">Отчество: </label><input class="col-7" type="text" name="patronymic" placeholder="Иванович" /></p>
         <p class="row"><label class="col-4">Дата рождения: </label><input class="col-7" type="date" name="birthday" required /></p>
@@ -36,7 +36,6 @@
                 <option>Бакалавриат 4</option>
                 <option>Магистратура 1</option>
                 <option>Магистратура 2</option>
-                <option>Другое</option>
             </select>
         </p>
         <!--Изменения Конец-->
@@ -44,12 +43,15 @@
         <p id="err2email" style="display:none" class="row"><span class="col-1 text-danger">Такой адрес почты уже существует в базе данных</span></p>
         <p class="row"><label class="col-4">E-mail: </label><input id="vltremail" class="col-7" type="email" name="email" placeholder="myaddress@yandex.ru" required /></p>
         <p id="errtel" style="display:none" class="row"><span class="col-1 text-danger">Неверный формат телефонного номера</span></p>
-        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="tel" name="phone" placeholder="+7(903)555 55 55" required/></p>
+        <p class="row"><label class="col-4">Телефон: </label><input id="vltrtel" class="col-7" type="tel" name="phone" placeholder="+7(903)555 55 55" required /></p>
         <p class="row"><label class="col-4">Логин: </label><input id="vlrtlog" class="col-7" type="text" name="login" placeholder="mylogin" required /></p>
         <p id="errpass" style="display:none"><span class="col-11 text-danger">Пароль не должен совпадать с логином</span></p>
         <!--Изменения Старт-->
-        <p class="row"><label class="col-4">Пароль: </label><input id="vltrpass" class="col-7" type="password" name="password" placeholder="mypassword" required /></p>
-        <p class="row"><span class="col-9"><input id="check" type="checkbox" name="check"> <label>Подтверждаю достоверность предоставленной информации</label></span></p>
+        <p class="row"><label class="col-4">Пароль: </label><input id="vltrpass" class="col-7" type="password" name="password" placeholder="passWord45" pattern="(?=.+[0-9])(?=.+[a-z])(?=.+[A-Z])[0-9a-zA-Z!@#$%^&*]{8,}" required /></p>
+        <p class="row"><span class="col-11 small">Пароль должен быть не менее 8 символов и содержать не менее одной цыфры, строчной и прописной буквы латинского алфавита.</span></p>
+        <p class="row"><span class="col-11"><input id="check" type="checkbox" name="check"> <label>Подтверждаю достоверность предоставленной информации</label></span></p>
+        <p class="row"><span class="col-10"><input id="check" type="checkbox" name="agree" required> Даю свое согласие на сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование предоставленных персональных данных.</span></p>
+        
         <!--Изменения Конец-->
         <p class="text-right m-0"><input id="butt" class="mr-4" type="submit" value="Зарегистрироваться" /></p>
     </form>
