--- a/user/templates/registration_view.html
+++ b/user/templates/registration_view.html
@@ -1,5 +1,5 @@
 {%extends "basicus.html"%}
-{%block title%}Регистрация на мероприятие{%endblock%}
+{%block title%}Волонтеры НИУ ВШЭ - Регистрация на мероприятие{%endblock%}
 {%block body%}
 <div class="container w-50 p-3 border rounded-lg">
     <h3 class="mb-4">Регистрация на мероприятие</h3>
