--- a/templates/basic.html
+++ b/templates/basic.html
@@ -16,7 +16,7 @@
         </div>
         <div class="exter">
             <h1 class="logo">Волонтерство на олимпиадах и конкурсах</h1>
-            <img src="/static/image/v2019.png" width="900px">
+            <img src="/static/image/v2019.png" width="50%"><img src="/static/image/v2019.png" width="50%">
         </div>
     </div>
 {%block body%}{%endblock%}
