--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {%extends "basic.html"%}
-{%block title%}Легион-Вход{%endblock%}
+{%block title%}Волонтеры НИУ ВШЭ - Вход{%endblock%}
 {%block body%}
 
 <div class="container w-50 p-3 border rounded-lg">
