--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -1,5 +1,5 @@
 {%extends "basic.html"%}
-{%block title%}Легион-Регистрация{%endblock%}
+{%block title%}Волонтеры НИУ ВШЭ - Регистрация{%endblock%}
 {%block body%}
 
 <div class="container w-50 p-3 border rounded-lg">
@@ -51,7 +51,7 @@
         <p class="row"><span class="col-11 small">Пароль должен быть не менее 8 символов и содержать не менее одной цыфры, строчной и прописной буквы латинского алфавита.</span></p>
         <p class="row"><span class="col-11"><input id="check" type="checkbox" name="check"> <label>Подтверждаю достоверность предоставленной информации</label></span></p>
         <p class="row"><span class="col-10"><input id="check" type="checkbox" name="agree" required> Даю свое согласие на сбор, запись, систематизацию, накопление, хранение, уточнение (обновление, изменение), извлечение, использование предоставленных персональных данных.</span></p>
-        
+
         <!--Изменения Конец-->
         <p class="text-right m-0"><input id="butt" class="mr-4" type="submit" value="Зарегистрироваться" /></p>
     </form>
