--- a/admin/templates/event.html
+++ b/admin/templates/event.html
@@ -7,9 +7,9 @@
 
     <table class="table table-striped m-auto">
         <thead>
-        <th>Событие</th>
-        <th>Активность/Предмет</th>
-        <th>Дата</th>
+        <th><a href="/admin/event?srt=event">Событие</a></th>
+        <th><a href="/admin/event?srt=activity">Активность/Предмет</a></th>
+        <th><a href="/admin/event">Дата</a></th>
         <th>Редактировать</th>
         <th colspan="2" align="center">Статистика</th>
         </thead>
