--- a/templates/basic.html
+++ b/templates/basic.html
@@ -16,7 +16,17 @@
         </div>
         <div class="exter">
             <h1 class="logo">Волонтерство на олимпиадах и конкурсах</h1>
-            <img src="/static/image/v2019.png" width="50%"><img src="/static/image/v2019.png" width="50%">
+            {% if (session.get('id')) %}
+            <img src="/static/image/v2019.png" width="50%" /><img src="/static/image/v2019.png" width="50%" />
+            {% else %}
+            <img src="/static/image/v2019.png" width="70%" style="padding-right: 15px" />
+                <form class="regform" action="/cabinetin" method="post">
+                    <div><label style="padding-right: 5px">Логин: </label> <input style="float:right" type="text" name="login" /></div>
+                    <div><label style="padding-right: 5px">Пароль: </label> <input style="float:right" type="password" name="password" /></div>
+                    <div><input style="float:right" type="submit" value="Войти" /></div>
+                    <div><a href="/recovery">Забыли пароль?</a></div>
+                </form>
+            {% endif %}
         </div>
     </div>
 {%block body%}{%endblock%}
