--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,6 +12,7 @@
             <p>Адресс: Москва, ул. Мясницая д.18, офис: 18-210, 18-211, 18-212</p>
             <p>Адрес электронной почты: <a href="mailto:olymp@hse.ru">olymp@hse.ru</a></p>
             <p>Телефон: 8 495 531 00 74</p>
+            <p><a href="https://olymp.hse.ru/volunteers" target="_blank">Сайт волонтерского движения</a> на портале Национального Исследовательского Университета "Высшая Школа Экономики"</p>
         </div>        
     </div>
 </div>
