--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,8 @@
 {%block body%}
 
 <div class="container w-50 p-3 border rounded-lg">
+    <h3 class="mb-4">Для входа в личный кабинет выполните авторизацию</h3>
+    <!-- Возможно восстановить страницу входа вличный кабинет
     <h3 class="mb-4">Вход в личный кабинет</h3>
     <form action="/cabinetin" method="post">
         <p class="row"><label class="col-4">Логин: </label><input class="col-7" type="text" name="login" /></p>
@@ -10,5 +12,6 @@
         <p class="text-right m-0"><input class="mr-4" type="submit" value="Войти" /></p>
     </form>
     <a href="/recovery">Забыли пароль?</a>
+    -->
 </div>
     {%endblock%}
