--- a/user/templates/cabinet.html
+++ b/user/templates/cabinet.html
@@ -9,7 +9,7 @@
     <div class="rule_menu m-2">
         <a href="/us/cabinet/nextevt" {% if bold==1 %} style="font-weight: bold" {% endif %}>Предстоящие события</a> |
         <a href="/us/cabinet/regevt" {% if bold==2 %} style="font-weight: bold" {% endif %}>Мои предстоящие события</a> |
-        <a href="/us/cabinet/lastevt" {% if bold==3 %} style="font-weight: bold" {% endif %}>События с моим участием</a>
+        <a href="/us/cabinet/lastevt" {% if bold==3 %} style="font-weight: bold" {% endif %}>Прошедшие события с моим участием</a>
     </div>
     <div class="content">
         {{content|safe}}
