--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,3 +62,25 @@
     margin-top: 50px;
     box-shadow: 10px 10px 20px -10px rgba(0,0,0,0.5)
 }
+
+
+/* --------------------- изображение на странице отказа от регистрации --------------------------*/
+.box {
+    overflow: hidden;
+    width: 170px;
+    height: 170px;
+    border-radius: 70px;
+    box-shadow: 0 0 20px 0 rgba(0,0,0,0.4);
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:20px;
+    margin-top:20px
+}
+
+    .box img {
+        position: relative;
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+        
+    }
