--- a/user/templates/cancel_registration.html
+++ b/user/templates/cancel_registration.html
@@ -2,7 +2,7 @@
 {%block title%}Волонтеры НИУ ВШЭ - Регистрация на мероприятие{%endblock%}
 {%block body%}
 <div class="container w-50 p-3 border rounded-lg text-center" >
-    <h3 class="mb-4">Отмена регистрация на мероприятие</h3>
+    <h3 class="mb-4">Отмена регистрации на мероприятие</h3>
     <div class="text-center">
         <div class="box">
             <img src="/static/image/on_pages/cry.gif" />
