--- a/admin/templates/event.html
+++ b/admin/templates/event.html
@@ -2,9 +2,12 @@
 {%block title%}Волонтеры НИУ ВШЭ - События{%endblock%}
 {%block body%}
 <div class="m-3 p-3 border rounded-lg">
-    <a class="m-2" href="{{url_for('administrator.event_add_html')}}">Создать событие</a>
-    <h2 class="m-2">Все события:</h2><div><form action="{{url_for('administrator.getsomeevents')}}" method="post">Выгрузить события за период с <input name="since" type="date" /> по <input name="to" type="date" /> <input type="submit" value="Пуск" /></form></div>
-    <div><form action="{{url_for('administrator.scopereg')}}" method="post">Динамика регистрации на события за период с <input name="since" type="date" /> по <input name="to" type="date" /> <input type="submit" value="Пуск" /></form></div>
+    <div><form action="{{url_for('administrator.getsomeevents')}}" method="post">Выгрузить события за период с <input name="since" type="date" /> по <input name="to" type="date" /> <input type="submit" value="Пуск" /></form></div><br />
+    <div><form action="{{url_for('administrator.scopereg')}}" method="post">Динамика регистрации на события за период с <input name="since" type="date" /> по <input name="to" type="date" /> <input type="submit" value="Смотреть" /></form></div><br />
+
+    <h2 class="m-2">Все события:</h2>
+    <strong><a class="m-2" href="{{url_for('administrator.event_add_html')}}" style="border:2px solid blue; padding:5px">Создать событие</a></strong>
+    <p></p>
     <table class="table table-striped m-auto">
         <thead>
         <th><a href="/admin/event?srt=event">Событие</a></th>
