--- a/templates/recovery.html
+++ b/templates/recovery.html
@@ -8,6 +8,6 @@
         <p class="row"><label class="col-4">Введите адрес почты: </label><input class="col-7" type="email" name="email" placeholder="myaddress@yandex.ru" required /></p>
         <p class="text-right m-0"><input class="mr-4" type="submit" value="Восстановить" /></p>
     </form>
-    <div>{{message}}</div>
+    <div>{{message | safe}}</div>
 </div>
     {%endblock%}
