--- a/user/templates/cancel_registration.html
+++ b/user/templates/cancel_registration.html
@@ -9,7 +9,7 @@
         </div>
         <p class="text-justify">
             Ты уверен, что хочешь отказаться от участия в этом мероприятии?
-            Помни, что оргкомитет рассчитывает на тебя и каждый раз, когда ты отменяешь участие, расстраивается один организатор.
+            Помни, что оргкомитет рассчитывает на тебя, и каждый раз, когда ты отменяешь участие, расстраивается один организатор.
         </p>
         <button class="btn btn-primary" onclick="location.href='{{url_for('user.unregistration', id_evt=id_evt)}}'">Отменить регистрацию</button>
         <button class="btn btn-primary" onclick="location.href='{{url_for('user.cabinet', action='1')}}'">Остаться волонтером</button>
