--- a/templates/personadd.html
+++ b/templates/personadd.html
@@ -19,7 +19,7 @@
         </p>
         <!--Изменения Конец-->
         <p class="row">
-            <label class="col-4">Факультет: </label>
+            <label class="col-4">Образовательная программа: </label>
             <select class="col-7" name="faculty">
                 {% for i in facultes %}
                 <option>{{i[2]}}</option>
