fix tempusers.html and sql insert from temp_user to person

--- a/admin/templates/tempusers.html
+++ b/admin/templates/tempusers.html
@@ -30,7 +30,7 @@
             <td>{{pers[8]}}</td>
             <td>{{pers[9]}}</td>
             <td>{{pers[10]}}</td>
-            <td><a href="{{url_for('administrator.confirm_adm', hash=pers[0])}}" onclick="return conf_reg()">не нажимать!</a></td>
+            <td><a href="{{url_for('administrator.confirm_adm', hash=pers[0])}}" onclick="return conf_reg()">Зарегистрировать</a></td>
         </tr>
         {%endfor%}
     </table>
