--- a/admin/templates/basicadm.html
+++ b/admin/templates/basicadm.html
@@ -28,6 +28,7 @@
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="{{url_for('administrator.index_adm')}}">Панель администратора</a>
                         <a class="dropdown-item" href="{{url_for('administrator.allusers')}}">Пользователи</a>
+                        <a class="dropdown-item" href="{{url_for('administrator.tempusers')}}">Незарегистрированные</a>
                         <a class="dropdown-item" href="{{url_for('administrator.event')}}">События</a>
                         <a class="dropdown-item" href="{{url_for('administrator.getdata')}}">Отчет по регистрациям</a>
                         <a class="dropdown-item" href="{{url_for('administrator.faculty')}}">Факультеты</a>
