--- a/admin/templates/posts.html
+++ b/admin/templates/posts.html
@@ -8,7 +8,7 @@
     <form action="{{url_for('administrator.addpost')}}" method="post">
         <p class="row">
             <label class="col-2">Тип: </label>
-            <span class="col-3"><label>Обший</label> <input type="radio" name="type" value="common" checked="checked" /></span>
+            <span class="col-3"><label>Общий</label> <input type="radio" name="type" value="common" checked="checked" /></span>
             <span class="col-3"><label>Школьная</label> <input type="radio" name="type" value="school" /></span>
             <span class="col-3"><label>Студенческая</label> <input type="radio" name="type" value="student" /></span>
         </p>
