--- a/admin/templates/post_recovery.html
+++ b/admin/templates/post_recovery.html
@@ -10,7 +10,7 @@
         <p class="row">
             <label class="col-2">Тип: </label>
             {% if new[4]=='student' %}
-            <span class="col-3"><label>Обший</label> <input type="radio" name="type" value="common" /></span>
+            <span class="col-3"><label>Общий</label> <input type="radio" name="type" value="common" /></span>
             <span class="col-3"><label>Школьная</label> <input type="radio" name="type" value="school" /></span>
             <span class="col-3"><label>Студенческая</label> <input type="radio" name="type" value="student" checked="checked" /></span>
             {% elif new[4]=='school' %}
