--- a/admin/templates/event.html
+++ b/admin/templates/event.html
@@ -10,6 +10,7 @@
     <p></p>
     <table class="table table-striped m-auto">
         <thead>
+        <th>id</th>
         <th><a href="/admin/event?srt=event">Событие</a></th>
         <th><a href="/admin/event?srt=activity">Активность/Предмет</a></th>
         <th><a href="/admin/event">Дата</a></th>
@@ -18,12 +19,14 @@
         </thead>
         {%for evt in events%}
         <tr>
+            <td>{{evt[0]}}</td>
             <td>{{evt[1]}}</td>
             <td>{{evt[2]}}</td>
             <td>{{evt[3]}}</td>
             <td>
-                <a class="text-danger" href="{{url_for('administrator.deletevt', id=evt[0])}}" onclick="return conf_del()">удалить<a>
-                / <a class="text-danger" href="{{url_for('administrator.changevt', id=evt[0])}}" onclick="return conf_change()">редактировать<a>
+                <a class="text-danger" href="{{url_for('administrator.deletevt', id=evt[0])}}" onclick="return conf_del()">
+                    удалить<a>
+                        / <a class="text-danger" href="{{url_for('administrator.changevt', id=evt[0])}}" onclick="return conf_change()">редактировать<a>
             </td>
             <td><a href="{{url_for('administrator.stat', id_evt=evt[0])}}">регистрации<a></td>
             <td><a href="{{url_for('administrator.visit', id_evt=evt[0])}}">посещения<a></td>
