--- a/admin/templates/personedit.html
+++ b/admin/templates/personedit.html
@@ -1,9 +1,9 @@
 {%extends "basicadm.html"%}
-{%block title%}Волонтеры НИУ ВШЭ - События{%endblock%}
+{%block title%}Волонтеры НИУ ВШЭ - Пользователь{%endblock%}
 {%block body%}
 
 <div class="container w-50 p-3 border rounded-lg">
-    <h3 class="mb-4">Регистрация нового волонтера</h3>
+    <h3 class="mb-4">Редактирование сведений о пользователе</h3>
     <form action="{{url_for('administrator.setedit')}}" method="post">
         <input type="hidden" name="id" value="{{result[0]}}" />
         <p class="row"><label class="col-4">Фамилия: </label><input class="col-7" type="text" name="surname" required value="{{result[1]}}" /></p>
