--- a/templates/basic.html
+++ b/templates/basic.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-9"><a href="/">Главная</a> | <a href="{{url_for('real_time')}}">Свободные места</a> | <a href="{{url_for('about')}}">О нас</a> | <a href="{{url_for('contact')}}">Контакты</a></div>
+            <div class="col-md-9"><a href="/">Главная</a> | <a href="{{url_for('real_time')}}">Свободные места</a> | <a href="{{url_for('news_get')}}">Новости из ВКонтакте</a> | <a href="{{url_for('about')}}">О нас</a> | <a href="{{url_for('contact')}}">Контакты</a></div>
             <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Личный кабинет</a></div>
         </div>
         <div class="exter">
