--- a/templates/basic.html
+++ b/templates/basic.html
@@ -12,11 +12,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-9"><a href="/">Главная</a> | <a href="{{url_for('real_time')}}">Свободные места</a> | <a href="{{url_for('news_get')}}">Новости из ВКонтакте</a> | <a href="{{url_for('about')}}">О нас</a> | <a href="{{url_for('contact')}}">Контакты</a></div>
+            <div class="col-md-9"><a href="/">Главная</a> | <a href="{{url_for('real_time')}}">Свободные места</a> | <a href="{{url_for('about')}}">О нас</a> | <a href="{{url_for('contact')}}">Контакты</a></div>
             <div class="col-md-3 text-right"><a href="/person">Регистрация</a> | <a href="/login">Личный кабинет</a></div>
         </div>
         <div class="exter">
-            <h1 class="logo">Волонтерство на олимпиадах и конкурсах</h1>
+            <h1 class="logo">Волонтерство на олимпиадах и конкурсах Личный Кабинет</h1>
             {% if (session.get('id')) %}
             <img src="/static/image/v2019.png" width="50%" /><img src="/static/image/v2019.png" width="50%" />
             {% else %}
